name:                MakeFunny
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kirelagin/MakeFunny#readme
license:             BSD3
license-file:        LICENCE
author:              Kirill Elagin
maintainer:          kirelagin@gmail.com
copyright:           2017 Kirill Elagin
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable MakeFunny
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
